[package]
name = "libv4l-sys"
description = "A FFI to libv4l"
version = "0.1.0"
authors = ["takayuki goto <takayuki@idein.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/idein/libv4l-sys"
repository = "https://github.com/idein/libv4l-sys"
documentation = "https://docs.rs/libv4l-sys"
readme = "README.md"
keywords = ["video4linux", "video"]
categories = ["external-ffi-bindings", "multimedia::images", "multimedia::video"]

[badges]
circle-ci = { repository = "idein/libv4l-sys" }
maintenance = { status = "experimental" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.51"
pkg-config = "0.3"

[dev-dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.6"

